start writing father ted

--- a/father-ted.html
+++ b/father-ted.html
@@ -1,46 +1,133 @@
-Lyndsay, a zoomer, with no fixed address
-and possessed by demons. 
-An inhuman monster
-What has made her to turn to evil? 
-Two sides of evil, positive and negative evil (good and bad)
-
-preferes the violence of him than her own father, because its more honest, 
-more transparent
+This story is based on true events,
+but be warned if thee read on, as thy understanding grows, so will thine  
+horror.
 
 
-The psychiatrits in the mental institution suggested ergotherapy, 
-the demon 
-a communities history histories can be attached to and carried 
-in perpetuity
+"I want to live." cried M, a bonny lass with no fixed address,
+ when confronted that its lifespan has expired.
+Its emotions combined with bio-engineered memory, triggered fierce resistance
+and if the humans were not be able to gain
+control over the expulsion of fecal matter, 
+which would be toxic if it remained in its system.
+it must be retired
 
-A canonical trial, on this supine vessel
-who didn't show interest in "actual" science, 
-interest in neo-platonist Hermeticism, a gnostic mystery cult
-a natural philospher
-
-
-
-in prison a fractious individual due to the supression 
-of sexuality /language. 
-into violent rage
+The psychiatrits in the mental institution suggested ergotherapy,  
+that the observed was in a transistory phase with Daddy issues
 
 
-Michael Edward "Ted" Prejit 
-was called to exorcize the demons out of 
-12 year old Lyndsay, 
+Any access to the opaqueness of its soul, a blackness so dark that swallowed all light, failed by modern science. 
+Only a former robocop 
+possessed the charism of exorcism to cast out evil spirits
+out of adolscent replicant Lyndsay M
+
+In a decaying future 
+Michael Edward "Ted" C. 
+a large, burnt-out pneumatic machine, 
+is breathing heavily before an outburst of violence and further creation of life.
+
+
+
+
+
+orgone therapy a success, rich 
+
+Its soft body exhibited violent ragemarkings and scars, 
+described as "bi-polar" in modern psychiatry
+animal magnetism, the life force.
+
+A mnemonic device
+stories ingrained in flesh testifies /proves the accuracy, 
+the reading interpration is open to the subject's imagination
+would be wrong to narrate in sequence, spiral  
+
+
+Meanwhile, a canonical trial was staged in its hometown
+on this supine vessel 
+who dared not to show any interest in "actual" science,  
+but rather had interest in neo-platonist Hermeticism, a gnostic mystery cult 
+which brings forth natural philosophers.
+a communities history histories can be attached to and carried  in perpetuity
+
+
+
+solar anus 
+
+
+Sent off to prison a fractious individual, even worse due to the supression  of sexuality /language.  
+
+the thin white Duke in the Vampire castle, weighing a soul, but one-dimensional??Marcusse
+The Work of Art in the Age of Mechanical Reproduction the preservation of Notre Dame, but transformshadow of the whip mysticism comples relationship to formal law
+
+
+ yea, bring on the biatch then, I don't deserve  a male compagnion. who cares? you'll hate the germans!!! just work and stfu, I don#t need fucking emotions I need AI numb, that#s it.  
+
+Lyndsay was unconsciously into Abstract sex and not want to be touched 
+but by the mind & soul.
+But the body and soul intertwined? 
+
+
+What has sparked to become such an inhuman monster?
+What has made her to turn to evil?
+Two sides of evil, positive and negative evil (good and bad
+Lyndsay, a zoomer and bonny lass, with no fixed address,
+possessed by demons, a practical necessity.
+confessed that her problem is that she can't think when she is speaking,
+while she is speaking difficulty of crafting sentences that will follow
+"rather talking with my cunt".
+Expressive power of her soul
+brain strata, wired differently
+ancient animal brain, 
+combinatorial grammar is built on it 
+a friction of the unconscious and unconscious, 
+do they correspond?
+how does the unconscious deal with formal articulation?
+
 the Genesis flood.
-A large man, not obese 
-breathing heavily
-stairs
 
-markings and scars, a memory, stories ingrained in flesh testifies /proves the accuracy, soft body 
-to narrate in sequence, 
+Thinking and crafting sentences at the same time,when body-mind is occupied
+by demonic possession, which interferes instantaneously with language,
+a deep unconscious affair, 
 
-orgone therapy
+Language is there to solve problems, logic, not to create them.
+ language like vision?
+society, a demoncratic process? playful rules, the law
 
-solar anus
+the demon lives on the event horizon, both the will to live and kill
+on the practical necessity of having demons
 
-the Duke in the Vampire castle
+Re-Becoming inhuman, is an evolutionary process, 
+redness in face
+from perceiving light, enlightenment, how to perceive threat
+no eyes needed, the vibes, you don't need to see the predator
+is language controlled by influential people? among the educated?
+influenza, the virus accelerates
+in other animals, how did lingo evolve (the whale singing to each other)
+body language, gesture, why did we become stiff instead, made words for it, we
+are the fossils
+a squirrel involves much more meaning for me, others don't know, private key
+grammer is the public key
+the only mammal of not capable of swallowing and vocalizing at the same time, 
+vulnerable to choking, dick in the mouth, shut the fuck up
+so many things in the world, need a sound for it, more knowledge more words
+with the internet sound spreads in an instant
+sounds replaced by the manufacture of speech, to distinguish from the animal
+
+
+It understands that language is futile, 
+a machinic language, placeholder text, a function, to enable
+computer to computer communication, formal code that is alien to the universerse
+
+Images processed by the body, understood in an instant
+metaphors too complex
+subconscious code, not encrypted, a genius code-breaker like Turing
+
+the unconscious is a biological machine/system for operating an animal
+breathing not function of the unconscious? <autonomous system in the brain>
+do plants not have an unconscious?
+
+the unconscious is better to solve math problems, because it sees it as a whole
+how it does it we don't know. 
+
 
 
 He is the leader of the Army of god. 
@@ -53,10 +140,6 @@ a male compagnion. who cares? you'll hate the germans!!!
 just work and stfu, I don#t need fucking emotions I need AI
 numb, that#s it. 
 
-Lyndsay was unconsciously into Abstract sex and not want to be touched but the soul.But the body and soul intertwined?
-The Work of Art in the Age of Mechanical Reproduction
-the preservation of Notre Dame, but transform
-
 
 Blessed Angel of Death, 
 guide me safely to the afterlife.
@@ -64,3 +147,8 @@ guide me safely to the afterlife.
 
 the shadow of the whip
 mysticism comples relationship to formal law
+
+I've humoured her
+peevishly
+cried
+eschew
