write uncle monty

--- a/kubany.html
+++ b/kubany.html
@@ -14,25 +14,19 @@
 The true expedition began to form in the Borderlands of Bohemia
 on a sunny, hot and dry day,
 which we observed a rather grim territory, 
-which just reflected 
-the binary logic of the multiplicity
-bla
+which just reflected the binary logic of the multiplicity.
 
-
+We were eager to leave, 
 the too cold and flat continental surfaces
 surface good and bad, the colours will devour skin and flesh
-we were eager to leave, 
 but which an outlook 
-
-
 and embark upon a journey on a Ceske Drahy, with its
 tracks of tight curves and steep inclines.
 
 
 The gridlocked situation 
 on empirical values 
-to experiment with 
-current French philosophy.
+to experiment with current French philosophy.
 
 
 Confused I was wandering the deserted station, 
@@ -385,20 +379,16 @@ wolves moan
 9 ways to get to know a stone
 Material bonded somehow
 kissed by transformative cosmic energy.
+Wolves howling at the moon, in hope for contact, 
+who is not bloated with reason and morality. 
 </p>
 
 <p>
-From afar I see this majestic green mountain.
+From afar I see a green mountain.
 Away from the main path, a small footpath into the  virgin forest. 
 On our way I notice a goshawk, motionless in the sky, until it fell from the sky, 
 to devour its cute prey. 
 I wait for some action, but it kept disappearing.
-
-
-
-
-Wolves howling at the moon, in hope for contact, 
-who is not bloated with reason and morality. 
 
 Autonomous engineered matter, intelligent materials
 process environmental stimuli and adapt. 
@@ -451,6 +441,10 @@ there must be some point of reference.
 </p>
 
 <p>
+The three body problem 
+nuclear family. 
+
+
 I see a couple heading towards me, 
 the man walks in front, the woman behind.
 We greet each other politely,
@@ -460,14 +454,13 @@ location determination,
 that there must be an exit close.
 The opportunity wanes, nobody wants to give itself the nakedness to break off
 and thus we courageously fight in this 
-infinite war. 
+infinite war alone.
 
 Strangely, as this happened shortly after and can not be coincidence,
 another scare event 
 a futurist biker, fully equipped with helmet, tech gear
 flashed by me. surreal
-Full speed, 
-a lateral force ?? 
+Full speed, a lateral force ?? 
 
 
 I see a house, a manor house, beyond the trees.
@@ -476,31 +469,16 @@ but here in the middle of nowhere?
 Suddenly it was gone, and I see only,
 time is creeping on from behind.
 
-
-Caspar David Friedrich, the great hierophant, 
-a new subjectivity, my system of organization of visibleness.
-a retor l'ordre, 
-assembled modules, a collage, a mess created by alien forces.
-magical realism
-vulnerable
-me contemplation of nature
-symbols of death.
-not trad mimeticism, distorted dark realism
-snapshot static, coz 
-can't grasp the dynamic beyond 
-
-
 There is a high peak of this mountain ridge
 where the warm sun reaching our skin, but cooling down in the shadows of deep forest.
 Cave entrance
 We found the remains of 
 The virgin forest was a singularity of geometrical perfection
+Asymetrical and symetrical shapes
 a world, unbenownst to posthuman man
 where everything connected together. 
 no distinction between fauna and flora.
 
-Asymetrical and symetrical shapes
-formed perfect 
 
 inumerable tall structures with of ineffable 
 with a perimeter of 20 feet
@@ -519,8 +497,6 @@ beyond any scientific evidence.
 
 The smell of green slime, no sound, just simulating energy.
 
-
-
 Mathematics
 subtract carving 
 add moulding?
@@ -534,54 +510,70 @@ technical objects exist transductively (change over time, transform over time?)
 tech took over, entangled. now on the summit, and looking in the fog.
 now downwards. 
 
-frame now, bodies and time. (vectors)
-tech feeds off this,
-animal frame: culture?
 </p>
 
+
+
+
 <p>
-Over time it dawned on me, that the absurd stories 
-of my granfather, were a large share of the Great Wisdom.
+Caspar David Friedrich, the great hierophant, 
+a new subjectivity, my system of organization of visibleness.
+a retor l'ordre, 
+assembled modules, a collage, a mess created by alien forces.
+magical realism
+vulnerable
+me contemplation of nature
+symbols of death.
+not trad mimeticism, distorted dark realism
+snapshot static, coz 
+can't grasp the dynamic beyond 
+</p>
+
+
+<p>
+My grandfather was born at at the foot of the majestic Kubany and knew about the 
+rites of the Old Ones, even practicing them.  
+
+Over time it dawned on me that the bizarre stories of my grandfather, 
+were actually nonsense and a large share of the Great Wisdom.
 The puzzling fragments were actually hints to further hollows
-for which I had to search the private and public keys in the cryptic thicket of the Bohemian Forest.
-
-
-
-There were two young in the first litter of the wolf, Shewolf became the leader of the  pack.  
-One can say this were the ancestors of the we'rewolf pack.  
-However, this was  a sign under the the two massive twin peaks belonging to stomping ground.  
-
+in the cryptic thicket of the Bohemian Forest.
 Then I had to fill them with speculations, which in turn 
 had to be assembled with existing structure. 
 Spreading revelations in a magnificent horrific whole, I was bound to.
 
-He was born at at the foot of the majestic Kubany and knew about the 
-rites of the Old Ones, even practicing them.  
-
-n There were two young in the first litter of the wolf, Shewolf became the leader of the  pack.  
+There were two young in the litter of the wolf, 
+and Shewolf became the leader of the  pack.  
 One can say this were the ancestors of the we'rewolf pack.  
 However, this was  a sign under the the two massive twin peaks belonging to stomping ground.  
-
 Then opted for careers in Eisenbahn and Bleistift
-when follow a train of thoughts 
-infected into the tunnel 
-zombie
 
 
-My grandpa foretold that if there will 
+
+It was foretold that if there will 
 be no distinction between man and woman, 
-will be the end of the world.
-
-siemandl
+will be the end of the world. 
+what might sound as fascist fear to a liberal hipster
+a grey mass out of once colourful people. 
 
 If a church is built the wrong way round, 
 'der aufgang aleer auf aufgänge regiert das all' 
-
+a metaphor, for god is dead, headed in the wrong direction,
 resurection The cross, arms wide main entrance, west or south (why south) 
 st peter, praying to west. 
 (pope , praying looking at the people) from 18th century, better built in the market 
 the grave 
 
+</p>
+
+<p>
+when follow a train of thoughts 
+infected into the tunnel 
+zombie
+</p>
+
+
+siemandl
 
 emitted debilitating rays if they had been impregnatied with some kind of radioactive material 
 
@@ -761,47 +753,23 @@ patriarchy cancer of warlike community.
 harem, greater power. >>lesser control of women
 
 
-
-
-wald 200 strich groß?
-gemeinschaftlich aufgeteilt, Allemender
-Filz? wolfgrubenfilz am Zusammenfluß warme und grasige Moldau. 
-Wellek??
- 
-
-warum wollten die von Krummau umziehen? coz Schattawa was best!
-Was ist Krummauer Herrschaft?
-Eleonore is da boss?
-Winterberger Herrschaft
-Fürst Schwarzenberg, Johann Adolf II. zu Schwarzenberg,
-(died in 1888, Anna Kriha geb.)
-a foreigner, from urban,
-acted up and claimed 
-the ruler, what was now region South Bomemia?
-
-Built the alien maze
-To find my way in ,
-what does the wolf sense.
-Hausörter vs Hauswiesen
-
-
-Eisenbahn, 
-out of control, 
-invoked a
-chaos of horror but
-"schreckliche Unordnung"
-alien classification, that made no sense at all. 
-of big conifers, spruces
-
-The modern man shocked 
-unflattering nature
-wolves in the mist
-The jungle a museum of primitive art.
 forstmeister Josef John (1840)
-
-
 Legend has it that I'm  the storm bringer. 
 whirling dust, clusters of vortexes. 
+
+
+<p>
+Hanson, Moorhead, Bryant.
+I infected them and countless more, 
+simply by transgressing their orbits.  
+I turned viral to purify their putrid flesh. 
+which they unconditionally embraced, 
+To became one in the dark-knight-body, 
+that primes the flesh for further transformation. 
+The dust yearns for the wet. 
+
+
+
 
 But if you ask, 
 Am I under their skin
@@ -819,15 +787,8 @@ guard hair, repel moisture and dirt
 
 annihilation. 
 
-<p>
-Hanson, Moorhead, Bryant.
-I infected them and countless more, 
-simply by transgressing their biological boundaries. 
-I turned viral to purify their putrid flesh. 
-which they unconditionally embraced, 
-To became one in the dark-knight-body, 
-that primes the flesh for further transformation. 
-The dust yearns for the wet. 
+
+
 </p>
 
 intelligence explosion, at a speed of milisecond, singularity,
