--- a/moorhead.html
+++ b/moorhead.html
@@ -4,7 +4,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>moorhead</title>
 <link rel="stylesheet" type="text/css" href="moorstyle.css">
-<!--<script type="text/javascript" script src="moorscript.js"></script> --!>
 </head>
 
 <body>
@@ -199,60 +198,7 @@ PTSD integral part of modern seyn
 since killin' the game became reason to whine
 </p>
 
-
-
-
-<!-----------------------The Modal ------!>
-<div id="id01" class="modal">
-<div class="modal-content"> 
-<div class="row">
-
-<div class="column">    
-<img src="images/33_tos.jpg">
-</div>
-
-<div class="column">    
-<p>Pre-order  cards and start building your deck before anyone else does!</p>
-    <h3> EXCLUSIVE OFFER</h3>   
-   <p>on Limited Edition</p>
-
-   <h1>0,- euro*</h1>
-
-    <p>Never miss a moment of the action with your personal d_d deck!</p>
-
-    
-<a href="https://www.patreon.com/c_jaeger" class="button">Become a sponsor</a>
-
-<p><span onclick="document.getElementById('id01').style.display='none'" class="nope">nope</span>
-</p>
-
-<p><span class="smallfont">*for the first 5 respondents excl. postage and packaging</span></p> 
-
-    </div>
-
-</div><!--row -->
-</div><!--modal-content-->
-</div><!--modal-->
-
-</div><!--container -->
-
-<script>
-//Get the modal   
-function initialSetup() {
-  if (document.getElementById('id01') != null) {
-    setTimeout(function() {
-      document.getElementById('id01').style.display = 'block';
-    }, 2000);
-  }
-}
-
-initialSetup();
-	
-
- 
-</script>
-
-
+<script type="text/javascript" script src="moorscript.js"></script> 
 </body>
 </html>
 
