--- a/father.html
+++ b/father.html
@@ -6,43 +6,71 @@ horror.
  when confronted with this fait accompli of its lifespan due to expire.
 
 Current emotions linked with bio-engineered memory 
-triggered a fierce resistance within the bonny lass, and
+triggered a fierce resistance within the bonny lass,
+with a severe allergy to all plastics
+the oral expulsion of fecal matter. 
 
-to humanity it seemed as it was losing control over the oral expulsion of fecal matter,
-but if remained in the flesh it would be toxic to the wretched creature,
 
+If remained in the flesh it would be toxic to the wretched creature,
 This necessary self-regulating process to maintain homeostasis 
 might be the appropriate countenance in outer space colonies 
 but deemed ghastly on earth, 
+
+
 and if psychologists in the mental institution 
-attain control over the observed 
-it meant retirement before expiration date. 
+loss of control over the observed 
+it meant retirement. 
 
 
-The aloofness of the black box denied access to the opaqueness of its soul 
-a gravitational darkness so dense that it swallows all light, 
-imagined 
-
-"What do you want to be when you grow up?", asked , 
+"What do you want to be when you grow up?", it was asked by a member of staff,
 who was missing a thumb, so she actually couldn't make any things. 
 "Jesus christ", muttered the unnerved.
 
-The gained confidence it lacked in childhood, 
-so the father, an ocean dweller, 
-decided to genetically modify the adoptee, 
-which makes the organism prone to brain fever and prevents blockage in grown-ups.
-
+The lack of confidence in childhood, 
+No wonder
 In light of the quality of spiritual sustenance humans buy in this habitat,
  objectivy of cunts.
+so the father, an ocean dweller, decided to genetically modify the adoptee, 
+which makes the organism prone to brain fever and prevents blockage in grown-ups.
+
 
 Basically animated objects born out of the ocean are made of fluid, 
 which was already liberated through its business objectives, 
 a wanker, not for profit but life itself.
 
-The function of the orgasm
-the life force and matter and motion
-materialists and vitalists, physics and chemistry
-chemistry, applied dynamics, a becoming we don't know
+Peppa Jones, minding her business, playing in the mud
+of the big city, 
+geographical order, map
+musterkrieg 
+emptied from souls, a ghost city. 
+shock wave, coercion, and was driven into the market place
+
+commodities to soothe the soul
+Meanwhile the Boer State aspired,  established a neo-colonial order,
+from slowly but surely to accelration, 
+a sonic boom deafened, forced removal of previous subsistance.
+flattened the borders identity, 
+unique individuals
+a grey mass following into the amazon slaughterhouse, 
+if you don't know their fellow pigs, 
+ a dissascociation from politics
+but proximity to economy
+
+on leash
+close enough to sense it.
+
+to incite boredom and envy
+work and no play, powerless towards butchers, 
+having money equals goodness and rightousness, above law
+
+they turned to themselves
+an accelerating spiral of buying, 
+commodities to soothe the soul from ennui,
+construction.
+
+
+
+
 
 
 Normies imagine the unwordly wretch as
@@ -66,7 +94,12 @@ cattle
 
 
 nothing and everything matters
-uncle monty
+
+
+
+The aloofness of the black box denied access to the opaqueness of its soul 
+a gravitational darkness so dense that it swallows all light, 
+imagined 
 
 the curator of life
 A fixed fanatism only on a selected few,
