--- a/kubany.html
+++ b/kubany.html
@@ -11,22 +11,44 @@
 <div class="container">
 
 <p>
-The true expedition began to form in the Borderlands of Bohemia
-on a sunny, hot and dry day,
-which we observed a rather grim territory, 
-which just reflected the binary logic of the multiplicity.
+It was a dry, hot and sunny day,
+when a more pleasant part of the expedition began to form 
+on the Borderlands of Bohemia, 
+which reflected the binary logic of the multiplicity all to well. 
 
-We were eager to leave, 
-the too cold and flat continental surfaces
-surface good and bad, the colours will devour skin and flesh
-but which an outlook 
-and embark upon a journey on a Ceske Drahy, with its
+The positive outlook on the much greener grass, 
+embarking  on a Ceske Drahy, upon a journey with its
 tracks of tight curves and steep inclines.
 
+We were eager to leave the territory of conflict, 
+and the ,for my taste, too cold and flat continental surfaces, 
+and its politics of preemptive power to colonize the future land. 
 
-The gridlocked situation 
-on empirical values 
-to experiment with current French philosophy.
+One should object surfaces, 
+rather than falling for the imbeciltiy of hollowing out too deep, 
+excavating infinite meaning, which is intrinsic in the earth, 
+and leave it for evermore. 
+
+where reconnaissance aircrafts hovering over 
+to pinpoint the slightest nullity, 
+react with friendly fire, 
+I was left with 
+joining this cyberwar and 
+digging trenches, just to fill them by digging another one
+with the absence of another writer with whom I would be able 
+to experiment with current philosophy 
+and to divert me from the terrors of deconstruction.
+A fellow  sonic blowing a French horn, experience vibrating the body, 
+a virtual, implanted memory, that never happened. 
+
+
+a gridlocked situation on 
+senses
+a psyop, friction of constant, useless excavation in the mind
+of not speaking trauma. 
+
+turned into a cyberwar, a militarized deconstruction in real time
+
 
 
 Confused I was wandering the deserted station, 
