add eros in outline to father

--- a/father.html
+++ b/father.html
@@ -2,24 +2,65 @@ This story is based on true events,
 but be warned if thee read on, thy understanding will grow and so will thine  
 horror.
 
-"I want to live!" cried M, a wee Zoomer with no fixed address,
+"I want to live!" cried PJ, a wee Zoomer with no fixed address,
  when confronted with this fait accompli of its lifespan due to expire.
 
 Current emotions linked with bio-engineered memory 
 triggered a fierce resistance within the bonny lass,
-with a severe allergy to all plastics
-the oral expulsion of fecal matter. 
+and in the oral expulsion of fecal matter.
 
+might be the appropriate countenance in outer space colonies 
+is deemed ghastly on earth, 
+psychologists in the mental institution 
+loss of control over the observed 
+
+body, 
+mind a vent for sex
+language,  
+
+
+Expression, 
+a sexed world, not having it, consumption 
+
+its desire for reproduction steered into replication
+after trauma, 
+instead of rage
 
 If remained in the flesh it would be toxic to the wretched creature,
 This necessary self-regulating process to maintain homeostasis 
-might be the appropriate countenance in outer space colonies 
-but deemed ghastly on earth, 
+
+PJ has a severe allergy to all plastics, 
+a pouvoir abstract sex.
+privatization of desire, not state
+
+The primal Internet, Eros, sometimes referred to as a "network of networks", 
+the communication tool, 
+gives key access to a vast space fantasy free to roam.
+
+Homer
+But Anthropmorphized
+
+but cells by Hollywood images, 
+
+defence systems seeking nahrung in cells
 
 
-and if psychologists in the mental institution 
-loss of control over the observed 
-it meant retirement. 
+
+
+which can't be expressed in six words or fewer
+The Evolution of language, more efficent, 
+time shorter, no time for expression, 
+
+
+regulated by the state, church, capitalism,
+love serves a function, feedback
+civilisation
+class division, categorization,
+
+
+------------------------------------------------
+
+
 
 
 "What do you want to be when you grow up?", it was asked by a member of staff,
